syntax = "proto3";

option csharp_namespace = "Mercury.Engine.API.Services.GrpcGenerated";

import "system/message.proto";

package chat;

// The chat service definition.
service Chat {
    rpc Subscribe(stream SubscriptionRequest) returns (stream SubscriptionReply);
}

// Object used to create the connection. It carries the user
message SubscriptionRequest {
    int32 userId = 1;
    system.Message  message = 2;
}

// The response message
message SubscriptionReply {
    system.Message message = 1;
}

message Open {
    int32 userId = 1;
}

message Close {

}